# yolo_ros_vino

./: .gitignore  CMakeLists.txt  README.md  package.xml
include/yolo_ros_vino/: yolo_ros_vino.hpp
launch/: yolo_ros_vino.launch
models/FP16/: yolov3_tiny_tags.labels  yolov3_tiny_tags.mapping  yolov3_tiny_tags.xml
models/FP32/: yolov3_tiny_person.mapping  yolov3_tiny_tags.labels  yolov3_tiny_tags.mapping  yolov3_tiny_tags.xml
models/FP32/old/: yolov3_tiny_person.xml  yolov3_tiny_tags.xml
src/: yolo_ros_vino.cpp  yolo_ros_vino_node.cpp
