<?xml version="1.0"?>
<package format="2">
  <name>yolo_ros_vino</name>

  <version>1.1.3</version>
  <description>OpenVINO implemntation of Darknet ROS to achieve realtime processing on x64 CPUs.</description>
  <maintainer email="haya.a.alsh@gmail.com">Haya Alsharif</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/haya-alsharif/darknet_ros</url>
  <author email="haya.a.alsh@gmail.com">Haya Alsharif</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>boost</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  
</package>
